# ppl

./: .cvsignore  .gitignore  AUTHORS  BUGS  CREDITS  ChangeLog  DarwinPorts_Portfile  Makefile.am  Makefile.in  NEWS  README  README.alpha  README.arm  README.configure  README.solaris  STANDARDS  TODO  acconfig.h  acinclude.m4  aclocal.m4  build_header  compile  config.guess  config.h.in  config.rpath  config.sub  configure  configure.ac  configure.in  configure.repo  depcomp  instchk.hh  ltmain.sh  missing  mkinstalldirs  ppl-0.9-docfiles.patch  ppl-config.sed  ppl.lsm.in  ppl.spec.in
Watchdog/: .cvsignore  .gitignore  CREDITS  ChangeLog  Doubly_Linked_Object.defs.hh  Doubly_Linked_Object.inlines.hh  Doubly_Linked_Object.types.hh  EList.defs.hh  EList.inlines.hh  EList.types.hh  EList_Iterator.defs.hh  EList_Iterator.inlines.hh  EList_Iterator.types.hh  Handler.defs.hh  Handler.inlines.hh  Handler.types.hh  INSTALL  Makefile.am  NEWS  Pending_Element.cc  Pending_Element.defs.hh  Pending_Element.inlines.hh  Pending_Element.types.hh  Pending_List.cc  Pending_List.defs.hh  Pending_List.inlines.hh  Pending_List.types.hh  README  README.doc  Time.cc  Time.defs.hh  Time.inlines.hh  Time.types.hh  Timeout.hh  Watchdog.cc  Watchdog.defs.hh  Watchdog.hh  Watchdog.inlines.hh  Watchdog.types.hh  config.guess  (+12 more)
Watchdog/doc/: .cvsignore  .gitignore  Makefile.am  README.doc  devref.doxyconf-html.in  devref.doxyconf-latex.in  devref.tex  gpl.dox  pwl.sty  user.doxyconf-html.in  user.doxyconf-latex.in  user.tex
Watchdog/m4/: Makefile.am  ltversion.m4
Watchdog/src/: .cvsignore  .gitignore  Doubly_Linked_Object.defs.hh  Doubly_Linked_Object.inlines.hh  Doubly_Linked_Object.types.hh  EList.defs.hh  EList.inlines.hh  EList.types.hh  EList_Iterator.defs.hh  EList_Iterator.inlines.hh  EList_Iterator.types.hh  Handler.defs.hh  Handler.inlines.hh  Handler.types.hh  Makefile.am  Makefile.in  Pending_Element.cc  Pending_Element.defs.hh  Pending_Element.inlines.hh  Pending_Element.types.hh  Pending_List.cc  Pending_List.defs.hh  Pending_List.inlines.hh  Pending_List.templates.hh  Pending_List.types.hh  Threshold_Watcher.cc  Threshold_Watcher.defs.hh  Threshold_Watcher.inlines.hh  Threshold_Watcher.templates.hh  Threshold_Watcher.types.hh  Time.cc  Time.defs.hh  Time.inlines.hh  Time.types.hh  Watchdog.cc  Watchdog.defs.hh  Watchdog.inlines.hh  Watchdog.types.hh  Weightwatch.cc  Weightwatch.defs.hh  (+4 more)
Watchdog/tests/: .cvsignore  .gitignore  Makefile.am  pwl_test.cc  pwl_test.hh  simple1.cc  watchdog1.cc
Watchdog/utils/: .cvsignore  .gitignore  Makefile.am  build_header  build_header.in
demos/ppl_lpsol/: .cvsignore  .gitignore  Makefile.am  dummy.cc  expected  expected_int16  expected_int16_a  expected_int32  expected_int32_a  expected_int64  expected_int64_a  expected_int8  expected_int8_a  expected_mpz  expected_mpz_a  glpk_set_d_eps.c  ppl_lpsol.1  ppl_lpsol.c  ppl_lpsol_extra_man_text
doc/: .cvsignore  .gitignore  Makefile.am  Makefile.in  Polyhedra.texinfo  README  README.doc  bib2dox  bib2html1.sed  bib2html2.sed  bugseng_logo.eps  definitions.dox  devref-browse.doxyconf-latex.in  devref-c-interface.doxyconf-html.in  devref-c-interface.doxyconf-latex.in  devref-c-interface.tex  devref-foreign-language-interface.doxyconf.in  devref-foreign-language-interface.tex  devref-java-interface.doxyconf-html.in  devref-java-interface.doxyconf-latex.in  devref-java-interface.tex  devref-language-interface.doxyconf.in  devref-language-interface.tex  devref-ocaml-interface.doxyconf-html.in  devref-ocaml-interface.doxyconf-latex.in  devref-ocaml-interface.tex  devref-print.doxyconf-latex.in  devref-prolog-interface.doxyconf-html.in  devref-prolog-interface.doxyconf-latex.in  devref-prolog-interface.tex  devref.doxyconf-html.in  devref.doxyconf-latex.in  devref.doxyconf-pdf.in  devref.tex  fdl.dox  fdl.tex  gpl.dox  gpl.tex  interfaces-html.sed  interfaces-latex.sed  (+36 more)
interfaces/: .cvsignore  .gitignore  Makefile.am  README.interfaces  interfaced_boxes.hh  marked_pointers.hh  ppl_interface_generator_common.m4  ppl_interface_generator_common_dat.m4  ppl_interface_generator_common_procedure_generators.m4  ppl_interface_generator_common_procedure_list.m4  ppl_interface_generator_copyright
interfaces/C/: .cvsignore  .gitignore  ppl_c.c  (+30 more)
src/: .Congruence_System.inlines.hh.kate-swp  .cvsignore  .gitignore  .swp.Linear_System.defs.hh  Affine_Space.cc  Affine_Space.defs.hh  Affine_Space.inlines.hh  Affine_Space.types.hh  Affine_Space_defs.hh  Affine_Space_inlines.hh  Affine_Space_types.hh  Any_Pointset.defs.hh  Any_Pointset.inlines.hh  Any_Pointset.types.hh  Any_Pointset_defs.hh  Any_Pointset_inlines.hh  Any_Pointset_types.hh  AskTell.defs.hh  AskTell.inlines.hh  AskTell.types.hh  Ask_Tell.defs.hh  Ask_Tell.inlines.hh  Ask_Tell.templates.hh  Ask_Tell.types.hh  Ask_Tell_defs.hh  Ask_Tell_inlines.hh  Ask_Tell_templates.hh  Ask_Tell_types.hh  BDS_Status.cc  BDS_Status.idefs.hh  BDS_Status.inlines.hh  BDS_Status_idefs.hh  BDS_Status_inlines.hh  BD_Shape.cc  BD_Shape.defs.hh  BD_Shape.inlines.hh  BD_Shape.templates.hh  BD_Shape.types.hh  BD_Shape_defs.hh  BD_Shape_inlines.hh  (+1010 more)
tests/: .cvsignore  BBox.cc  BBox.hh  CbecomesNNC1.cc  FCAIBVP.cc  FCAIBVP.defs.hh  FCAIBVP.inlines.hh  FCAIBVP.types.hh  Makefile.am  Makefile.in  NNCbecomesC1.cc  NNCinclusion1.cc  NNCminimize1.cc  NNCminimize2.cc  NNCminimize3.cc  NNCminimize4.cc  NNCminimize5.cc  NNCminimize6.cc  PFunction.cc  PFunction.hh  Partial_Function.cc  Partial_Function.defs.hh  Partial_Function.inlines.hh  Partial_Function.types.hh  README  Random_Number_Generator.defs.hh  Random_Number_Generator.inlines.hh  Random_Number_Generator.types.hh  Random_Number_Generator_defs.hh  Random_Number_Generator_inlines.hh  Random_Number_Generator_types.hh  addconstraint1.cc  addconstraint2.cc  addconstraint3.cc  addconstraints1.cc  addconstraints10.cc  addconstraints11.cc  addconstraints12.cc  addconstraints13.cc  addconstraints2.cc  (+426 more)
utils/: .cvsignore  .gitignore  Makefile.am  build_header.in  cm_cleaner.sh  cm_splitter.sh  text2cxxarray  text2cxxarray.in  timings.cc  timings.hh
(+1936 files in other folders)
